# breath

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
PRPs/features/: buddhist-corpus-for-rag.md  deploy-zen-chat.md  dev-script.md  mitigate-zen-chat-security.md  rag-ingest-docker-build.md  zen-chat-streaming.md
breath-web/: .env.example  .vade-report  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
breath-web/src/: App.css  App.tsx  DifficultyScale.tsx  breathStack.ts  constants.ts  i18n.ts  index.css  main.tsx  types.ts  utils.ts
breath-web/src/components/: Beads.tsx  BreathSession.tsx  CenterAum.tsx  PhaseDots.tsx  SettingsDropdown.tsx  SettingsPanel.tsx  SlotInput.tsx  VisibilitySlider.tsx  ZenChatPanel.tsx
breath-web/src/hooks/: useBreathAnimation.ts  useBreathStackLayout.ts  useBreathTimer.ts  useClickOutside.ts  useDurationsSync.ts  useFullscreen.ts  usePresence.ts  useSessionOrchestration.ts  useTapHandlers.ts  useVisibilityLerp.ts  useVisibilityWithDelays.ts  useZenChat.ts
docs/plans/: 2026-03-07-breathing-site.md  2026-03-08-visualization-variants-design.md
zen-chat-backend/: .dockerignore  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
zen-chat-backend/app/: config.py  main.py
zen-chat-backend/app/rag/: ingest.py  prompts.py  schemas.py  service.py  store.py
zen-chat-backend/data/buddhist_texts/sample/: dhammapada_sample.txt
zen-chat-backend/scripts/: __init__.py  fetch_buddhist_corpus.py
zen-chat-backend/tests/: test_main.py
(+14 files in other folders)
