[project]
name = "zen-chat-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Zen Buddhist chatbot with RAG-ready HTTP API."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "slowapi>=0.1.9",
  "chromadb>=0.5.5",
  "datasets>=4.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

